--- a/style.css
+++ b/style.css
@@ -5,21 +5,27 @@
     padding: 0;
     font-family: 'Roboto', Arial, Helvetica;
 }
+h1 {
+    text-align: center;
+}
+h2 {
+    text-align: center;
+}
 
+h3{
+    text-align: center;
+}
 header {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     padding: 20px 50px;
     box-shadow: 0 1px 8px #ddd;
     position:relative
 }
 
-#nav-logo {
-    margin-right: auto;
-}
 
 header li {
     list-style: none;
@@ -32,34 +38,42 @@ header a {
     color: #555;
     transition: all 0.3s ease 0s;
 }
-header .nav-logo img{
-    width:10em
-}
+
 
 header a:hover {
     color: #5E3BEE;
 }
-header a:active {
+
+header a:active,
+header .active a {
     color: #5E3BEE;
 }
 
-
-body .selected-month{
+body .selected-month {
     text-align: center;
     margin: auto;
     width: 50%;
     padding: 10px; 
 }
-body .scrollbar-container{
+
+body .scrollbar-container {
     margin: auto;
     width: 50%;
-    padding: 10px; 
+    padding: 10px;
+    display: flex;
+    align-items: center;
 }
+
 .scrollbar-container input[type="range"] {
     width: 100%;
     overflow-x: auto;
-  }
+}
 
+.scrollbar-container button {
+    flex: 0 0 auto;
+    margin-left: 10px;
+    margin-right: 10px;
+}
   svg {
     display: block;
     margin: 0 auto;
@@ -97,3 +111,7 @@ body .scrollbar-container{
     stroke: #ccc;
     stroke-dasharray: 2px 2px;
 }
+
+.arc {
+    cursor: pointer;
+  }
